software/applications/elastic-search/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-search
labels:
    toolkit.fluxcd.io/tenant: dev-team
    istio-injection: enabled
