software/applications/elastic-search/job.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: elastic-search
spec:
  serviceAccountName: workload-identity-sa
  containers:
  - name: debug-container
    image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
    volumeMounts:
      - name: es-basic-auth
        mountPath: /mnt/elasticsearch-es-elastic-user
        subPath: elastic
    command: ["/bin/sh"]
    args: ["-c", "while true; do sleep 30; done"]
  volumes:
  - name: es-basic-auth
    secret:
      secretName: "elasticsearch-es-elastic-user"
