software/applications/elastic-search/ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana
  namespace: elastic-search
spec:
  hosts:
  - "*" # Replace with your specific domain
  gateways:
  - istio-system/internal-gateway
  - istio-system/external-gateway
  http:
  - match:
    - uri:
        prefix: /kibana
    rewrite:
      uri: "/"
    route:
    - destination:
        host: kibana-kb-http.elastic-search.svc.cluster.local
        port:
          number: 5601

# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: elasticsearch
#   namespace: elastic-search
# spec:
#   hosts:
#   - "*" # Match all hosts
#   gateways:
#   - istio-system/internal-gateway
#   - istio-system/external-gateway
#   http:
#   - match:
#     - uri:
#         prefix: /elastic
#     route:
#     - destination:
#         host: elasticsearch-es-http.elastic-search.svc.cluster.local
#         port:
#           number: 9200
#     rewrite:
#       uri: "/"
